Disable the UserIdentityConfiguration

--- a/dummy_dynamic_pipeline/config.json
+++ b/dummy_dynamic_pipeline/config.json
@@ -1,5 +1,5 @@
 {
-    "subscription_id": "96aede12-2f73-41cb-b983-6d11a904839b",
-    "resource_group": "promptflow",
-    "workspace_name": "promptflow-eastus-dev"
+    "subscription_id": "8e083f31-61f8-49c5-96a2-1366c4e338c6",
+    "resource_group": "BizChat",
+    "workspace_name": "CWC-WS"
 }
